[b][color=orange]v4.36[/color], 14.11.2019[/b][list]
[*]Changed some settings via install, which is now needed with the upcoming ElvUI update.
[*]Removed DBM skin. You can still get my style via AddOnSkins.
[*]Disable my Heal Prediction by default. Must figure out, why it dont work for some people.[/list]


[b][color=orange]v4.35[/color], 12.11.2019[/b][list]
[*]Removed the compatibility checks, i don't want to deal with it.[/list]


[b][color=orange]v4.34a[/color], 10.11.2019[/b][list]
[*]Don't load my Armory if S&L is loaded. For now.[/list]


[b][color=orange]v4.34[/color], 10.11.2019[/b][list]
[*]Fix some errors if you are using dual profiles. Thanks to fgprodigal <3
[*]Changed my MicroBar Tooltip instance lockout.
[*]Fixed my Clique Skin, it newer worked. lol
[*]Removed CleanBossButton Code, its now default in ElvUI.
[*]Tweak a bit the RaidManager Code.
[*]Added an own glow for Actionbar procs.
[*]Added my Tags to the Available Tags option in ElvUI.
[*]Updated Minimap Buttons, the Buttons will now stay visible, if you click them.
[*]Added an "Undress Button" to the DressUpFrame.
[*]Removed the Aura Icon Spacing code for the UnitFrames.
[*]Updated/Added some Skin.
[*]Added a shadow around UnitFrames & NamePlates Debuffs that the debuff color is more visible.[/list]

[b][color=orange]v4.33[/color] for 8.2.5, 25.09.2019[/b][list]
[*]The Chat Menu now dont force a fix Chat Height.
[*]Removed Raider.IO skinning support. Grab AddOnSkins.
[*]Completly redesigned my Minimap Buttons. Not for users with a lot of buttons!!
[*]Hopefully fix MicroBar Invasion Timers. >.>
[*]Take account for the changed tags in ElvUI.
[*]Added AzeriteEssence Skin.
[*]8.2.5 changes.
[*]Added an own Raid Manager and hide the ElvUI Raid Control.[/list]


[b][color=orange]v4.32[/color], 15.09.2019[/b][list]
[*]Fixed EncounterJournal Tab backdrop.
[*]Fixed AutoButton Usable Button color options.
[*]Added an own Minimap Difficulty Indicator => Text.