@@ -1,3 +1,13 @@
+[b][color=orange]v4.37[/color], 26.11.2019[/b][list]
+[*]DPS LAYOUT UPDATE: If you want it, do the install process again!!
+[*]Added some animated stuff to gossip/quest frames.
+[*]Updated Heal Prediction.
+[*]Updated GCD Bar (disabled by default).
+[*]Added a Swing Bar (disabled by default).
+[*]AutoButtons can now use the Global Fade Transparency.
+[*]Options cleanup.
+
+
 [b][color=orange]v4.36[/color], 14.11.2019[/b][list]
 [*]Changed some settings via install, which is now needed with the upcoming ElvUI update.
 [*]Removed DBM skin. You can still get my style via AddOnSkins.
